// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ad hoc tools should display the pinned target page visualizations when enabling the "Automated checks" toggle 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="chrome-extension://akiplfjoiekiceeppgmkgfggdekaofga/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="chrome-extension://akiplfjoiekiceeppgmkgfggdekaofga/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <div
      class="insights-container insights-highlight-container insights-issues"
    >
      <div
        class="insights-highlight-box"
        style="outline-style: solid; outline-color: rgb(204, 0, 0); top: 79.5417px; left: 8px; min-width: 787px; min-height: 154px;"
        title="Failed rules: frame-title"
      >
        <div
          class="insights-highlight-text failure-label"
          style="background: rgb(204, 0, 0); color: rgb(255, 255, 255); width: 2em !important; cursor: pointer !important; text-align: center !important;"
        >
          !
        </div>
      </div>
      <div
        class="insights-highlight-box"
        style="outline-style: solid; outline-color: rgb(204, 0, 0); top: 317.083px; left: 8px; min-width: 787px; min-height: 154px;"
        title="Failed rules: frame-title"
      >
        <div
          class="insights-highlight-text failure-label"
          style="background: rgb(204, 0, 0); color: rgb(255, 255, 255); width: 2em !important; cursor: pointer !important; text-align: center !important;"
        >
          !
        </div>
      </div>
      <div
        class="insights-highlight-box"
        style="outline-style: solid; outline-color: rgb(204, 0, 0); top: 5px; left: 5px; min-width: 790px; min-height: 483.083px;"
        title="Failed rules: html-has-lang"
      >
        <div
          class="insights-highlight-text failure-label"
          style="background: rgb(204, 0, 0); color: rgb(255, 255, 255); width: 2em !important; cursor: pointer !important; text-align: center !important;"
        >
          !
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Ad hoc tools should display the pinned target page visualizations when enabling the "Color" toggle 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="chrome-extension://akiplfjoiekiceeppgmkgfggdekaofga/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="chrome-extension://akiplfjoiekiceeppgmkgfggdekaofga/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
  </div>
</DocumentFragment>
`;

exports[`Ad hoc tools should display the pinned target page visualizations when enabling the "Headings" toggle 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="chrome-extension://akiplfjoiekiceeppgmkgfggdekaofga/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="chrome-extension://akiplfjoiekiceeppgmkgfggdekaofga/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <div
      class="insights-container insights-highlight-container insights-heading"
    >
      <div
        class="insights-highlight-box"
        style="outline-style: solid; outline-color: rgb(0, 102, 204); top: 21.4375px; left: 8px; min-width: 784px; min-height: 36.6667px;"
        title=""
      >
        <div
          class="insights-highlight-text text-label"
          style="background: rgb(0, 102, 204); color: rgb(255, 255, 255); text-align: center !important;"
        >
          H1
        </div>
      </div>
      <div
        class="insights-highlight-box"
        style="outline-style: solid; outline-color: rgb(0, 102, 204); top: 258.979px; left: 8px; min-width: 784px; min-height: 36.6667px;"
        title=""
      >
        <div
          class="insights-highlight-text text-label"
          style="background: rgb(0, 102, 204); color: rgb(255, 255, 255); text-align: center !important;"
        >
          H1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Ad hoc tools should display the pinned target page visualizations when enabling the "Landmarks" toggle 1`] = `
<DocumentFragment>
  <div
    id="insights-shadow-container"
  >
    <link
      href="chrome-extension://akiplfjoiekiceeppgmkgfggdekaofga/injected/styles/default/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="chrome-extension://akiplfjoiekiceeppgmkgfggdekaofga/bundle/injected.css"
      rel="stylesheet"
      type="text/css"
    />
    <div
      class="insights-container insights-highlight-container insights-landmark"
    />
  </div>
</DocumentFragment>
`;

exports[`Ad hoc tools should pass accessibility validation in high contrast 1`] = `
Array [
  Object {
    "id": "color-contrast",
    "nodes": Array [
      Object {
        "failureSummary": "Fix any of the following:
  Element has insufficient color contrast of 1.07 (foreground color: #ffff00, background color: #ffffff, font size: 10.5pt, font weight: bold). Expected contrast ratio of 4.5:1",
        "selector": Array [
          "a[href=\\"\\\\#\\"]",
        ],
      },
      Object {
        "failureSummary": "Fix any of the following:
  Element has insufficient color contrast of 1.07 (foreground color: #ffff00, background color: #ffffff, font size: 10.5pt, font weight: bold). Expected contrast ratio of 4.5:1",
        "selector": Array [
          ".ad-hoc-tools-panel-group-0 > div:nth-child(3) > .ms-Grid-row:nth-child(2) > .ms-sm8.ms-Grid-col > a[target=\\"_blank\\"][title=\\"Guidance\\"]",
        ],
      },
      Object {
        "failureSummary": "Fix any of the following:
  Element has insufficient color contrast of 1.07 (foreground color: #ffff00, background color: #ffffff, font size: 10.5pt, font weight: bold). Expected contrast ratio of 4.5:1",
        "selector": Array [
          "div:nth-child(5) > .ms-Grid-row:nth-child(2) > .ms-sm8.ms-Grid-col > a[target=\\"_blank\\"][title=\\"Guidance\\"]",
        ],
      },
      Object {
        "failureSummary": "Fix any of the following:
  Element has insufficient color contrast of 1.07 (foreground color: #ffff00, background color: #ffffff, font size: 10.5pt, font weight: bold). Expected contrast ratio of 4.5:1",
        "selector": Array [
          "div:nth-child(1) > .ms-Grid-row:nth-child(2) > .ms-sm8.ms-Grid-col > a[target=\\"_blank\\"][title=\\"Guidance\\"]",
        ],
      },
      Object {
        "failureSummary": "Fix any of the following:
  Element has insufficient color contrast of 1.07 (foreground color: #ffff00, background color: #ffffff, font size: 10.5pt, font weight: bold). Expected contrast ratio of 4.5:1",
        "selector": Array [
          ".ad-hoc-tools-panel-group-1 > div:nth-child(3) > .ms-Grid-row:nth-child(2) > .ms-sm8.ms-Grid-col > a[target=\\"_blank\\"][title=\\"Guidance\\"]",
        ],
      },
      Object {
        "failureSummary": "Fix any of the following:
  Element has insufficient color contrast of 1.07 (foreground color: #ffff00, background color: #ffffff, font size: 8.3pt, font weight: bold). Expected contrast ratio of 4.5:1",
        "selector": Array [
          "#back-to-launchpad-link",
        ],
      },
    ],
  },
]
`;
